--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
-    "otp-generator": "^4.0.0"
+    "nodemailer": "^6.9.2",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "otp-generator": "^4.0.0",
+    "smtp-server": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
