--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.5",
     "framer-motion": "^11.3.28",
     "i": "^0.3.7",
     "mdb-react-ui-kit": "^8.0.0",
