--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "nodemailer": "^6.9.2",
     "nodemailer-smtp-transport": "^2.7.4",
     "otp-generator": "^4.0.0",
+    "prettier": "^3.3.3",
     "smtp-server": "^3.11.0"
   },
   "devDependencies": {
